--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,20 +1,26 @@
-  @font-face {
+@font-face {
     font-family: 'Anakotmai';
-    src: url('/fonts/Anakotmai-Light.ttf') format('ttf');
+    src: url('/fonts/anakotmai-light.woff2') format('woff2'),
+         url('/fonts/anakotmai-light.woff') format('woff'),
+         url('/fonts/anakotmai-light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Anakotmai';
-    src: url('/fonts/Anakotmai-Medium.ttf') format('ttf');
+    src: url('/fonts/anakotmai-medium.woff2') format('woff2'),
+         url('/fonts/anakotmai-medium.woff') format('woff'),
+         url('/fonts/anakotmai-medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Anakotmai';
-    src: url('/fonts/Anakotmai-Bold.ttf') format('ttf');
+    src: url('/fonts/anakotmai-bold.woff2') format('woff2'),
+         url('/fonts/anakotmai-bold.woff') format('woff'),
+         url('/fonts/anakotmai-bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
-  }
+}
